--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -977,7 +977,30 @@ Now available to download in full as a PDF.},
   groups     = {webpages, pressure_vessel_Section},
   url       = {https://plasticker.de/preise/},
   urldate = {2024-09-26},
-  year      = {2015},
+}
+
+@Online{link_alstom,
+  author    = {Alstom},
+  title     = {Alstom hydrogen powered train},
+  groups     = {webpages, pressure_vessel_Section},
+  url       = {https:/https://www.alstom.com/alstoms-green-traction-solutions-sustainable-solutions-non-electrified-railwaysplasticker.de/preise/},
+  urldate = {2024-09-27},
+}
+
+@Online{link_hyundai_nexo,
+  author    = {Hyundai},
+  title     = {Hyundai Nexo, fifth generation},
+  groups     = {webpages, pressure_vessel_Section},
+  url       = {https://www.hyundai.com/eu/models/nexo/features.html},
+  urldate = {2024-09-27},
+}
+
+@Online{link_hydro_airbus,
+  author    = {Alstom},
+  title     = {Airbus project: ZEROe, towards the world's first hydrogen-powered commercial aircraft},
+  groups     = {webpages, pressure_vessel_Section},
+  url       = {https://www.airbus.com/en/innovation/energy-transition/hydrogen/zeroe},
+  urldate = {2024-09-27},
 }
 
 @online{img_Toyota,
@@ -1042,7 +1065,7 @@ Now available to download in full as a PDF.},
   author  = {Barral, Katia and Barth{\'e}l{\'e}my, Herv{\'e}},
   title   = {Hydrogen high pressure tanks storages: overview and new trends due to H2 Energy specifications and constraints},
   volume  = {20},
-  groups  = {hydrogen, report_1},
+  groups  = {hydrogen, report_1, pressure_vessel_Section},
   journal = {June. http://www. cder. dz/},
   year    = {2006},
 }
@@ -1220,12 +1243,11 @@ Now available to download in full as a PDF.},
 
 @online{link_Airbus_350,
   author = {Airbus},
-  title  = {Homepage of Airbus},
+  title  = {Landing page for the A350 (Airbus)},
   annote   = {},
   url    = {https://aircraft.airbus.com/en/aircraft/a350-clean-sheet-clean-start/a350-1000},
   urldate = {2024-04-03},
   groups = {webpages},
-  owner  = {Airbus},
 }
 
 @online{link_Image_Type_4_Cylinder,
@@ -5328,6 +5350,88 @@ Part 1: Flow capacities up to and including 120 g/s},
   issn         = {0360-3199},
   pages        = {352--370},
   volume       = {52},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Rath2019,
+  author       = {Rath, Rosalin and Kumar, Piyush and Mohanty, Smita and Nayak, Sanjay Kumar},
+  date         = {2019-08},
+  journaltitle = {International Journal of Energy Research},
+  title        = {Recent advances, unsolved deficiencies, and future perspectives of hydrogen fuel cells in transportation and portable sectors},
+  doi          = {10.1002/er.4795},
+  issn         = {1099-114X},
+  number       = {15},
+  pages        = {8931--8955},
+  volume       = {43},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Hindawi Limited},
+}
+
+@Article{Li2024a,
+  author       = {Li, Ji-Chao and Xu, Heng and Zhou, Ke and Li, Ji-Qiang},
+  date         = {2024-02},
+  journaltitle = {Heliyon},
+  title        = {A review on the research progress and application of compressed hydrogen in the marine hydrogen fuel cell power system},
+  doi          = {10.1016/j.heliyon.2024.e25304},
+  issn         = {2405-8440},
+  number       = {3},
+  pages        = {e25304},
+  volume       = {10},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{GonzalezGaray2022,
+  author       = {Gonzalez-Garay, Andres and Bui, Mai and Freire Ordóñez, Diego and High, Michael and Oxley, Adam and Moustafa, Nadine and Sáenz Cavazos, Paola A. and Patrizio, Piera and Sunny, Nixon and Mac Dowell, Niall and Shah, Nilay},
+  date         = {2022-06},
+  journaltitle = {Annual Review of Chemical and Biomolecular Engineering},
+  title        = {Hydrogen Production and Its Applications to Mobility},
+  doi          = {10.1146/annurev-chembioeng-092220-010254},
+  issn         = {1947-5446},
+  number       = {1},
+  pages        = {501--528},
+  volume       = {13},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Annual Reviews},
+}
+
+@Book{Schmidt2020,
+  author    = {Schmidt, Thomas},
+  date      = {2020},
+  title     = {Wasserstofftechnik},
+  isbn      = {3446460012},
+  location  = {München},
+  pagetotal = {512},
+  publisher = {Hanser},
+  subtitle  = {Grundlagen, Systeme, Anwendung, Wirtschaft},
+  groups    = {pressure_vessel_Section},
+  ppn_gvk   = {1699137307},
+}
+
+@Article{Barthelemy2017,
+  author       = {Barthelemy, H. and Weber, M. and Barbier, F.},
+  date         = {2017-03},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Hydrogen storage: Recent improvements and industrial perspectives},
+  doi          = {10.1016/j.ijhydene.2016.03.178},
+  issn         = {0360-3199},
+  number       = {11},
+  pages        = {7254--7262},
+  volume       = {42},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Hassan2021,
+  author       = {Hassan, I.A. and Ramadan, Haitham S. and Saleh, Mohamed A. and Hissel, Daniel},
+  date         = {2021-10},
+  journaltitle = {Renewable and Sustainable Energy Reviews},
+  title        = {Hydrogen storage technologies for stationary and mobile applications: Review, analysis and perspectives},
+  doi          = {10.1016/j.rser.2021.111311},
+  issn         = {1364-0321},
+  pages        = {111311},
+  volume       = {149},
   groups       = {pressure_vessel_Section},
   publisher    = {Elsevier BV},
 }
