inshallah before first correction pressure vessel basics

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -981,10 +981,50 @@ Now available to download in full as a PDF.},
 
 @Online{link_alstom,
   author    = {Alstom},
-  title     = {Alstom hydrogen powered train},
+  title     = {Alstom: A hydrogen powered train},
   groups     = {webpages, pressure_vessel_Section},
   url       = {https:/https://www.alstom.com/alstoms-green-traction-solutions-sustainable-solutions-non-electrified-railwaysplasticker.de/preise/},
   urldate = {2024-09-27},
+}
+
+@Online{link_hyundai_nexo_img,
+  author    = {Hyundai},
+  title     = {Hyundai NEXO: A hydrogen powered car},
+  groups     = {webpages, pressure_vessel_Section},
+  url       = {https://www.hyundai.com/de/de/modelle/nexo/ausstattung.html},
+  urldate = {2024-09-30},
+}
+
+@Online{link_hyundai_ix35_img,
+  author    = {Hyundai},
+  title     = {Hyundai IX35: A hydrogen powered car},
+  groups     = {webpages, pressure_vessel_Section},
+  url       = {https://ecomento.de/2015/03/26/preis-wasserstoffauto-hyundai-ix35-fuelcell/},
+  urldate = {2024-09-30},
+}
+
+@Online{link_toyota_mirai_ii_img,
+  author    = {Toyota},
+  title     = {Toyota MIRAI II: A hydrogen powered car},
+  groups     = {webpages, pressure_vessel_Section},
+  url       = {https://www.toyota.de/neuwagen/mirai},
+  urldate = {2024-09-30},
+}
+
+@Online{link_honda_clarity_img,
+  author    = {Honda},
+  title     = {Honda Clarity: A hydrogen powered car},
+  groups     = {webpages, pressure_vessel_Section},
+  url       = {https://hondanews.com/en-US/honda-automobiles/releases/%20release-4f88c507e72a4e7630685979cb04f2cb-2021-clarity-fuel-cell-specifications-features},
+  urldate = {2024-09-30},
+}
+
+@Online{link_mercedes_glc_img,
+  author    = {Mercedes},
+  title     = {Mercedes Benz GLC: A hydrogen powered car},
+  groups     = {webpages, pressure_vessel_Section},
+  url       = {https://mercedes-benz-media.co.uk/releases/41},
+  urldate = {2024-09-30},
 }
 
 @Online{link_hyundai_nexo,
@@ -5432,6 +5472,20 @@ Part 1: Flow capacities up to and including 120 g/s},
   issn         = {1364-0321},
   pages        = {111311},
   volume       = {149},
+  groups       = {pressure_vessel_Section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Zheng2012,
+  author       = {Zheng, Jinyang and Liu, Xianxin and Xu, Ping and Liu, Pengfei and Zhao, Yongzhi and Yang, Jian},
+  date         = {2012-01},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Development of high pressure gaseous hydrogen storage technologies},
+  doi          = {10.1016/j.ijhydene.2011.02.125},
+  issn         = {0360-3199},
+  number       = {1},
+  pages        = {1048--1057},
+  volume       = {37},
   groups       = {pressure_vessel_Section},
   publisher    = {Elsevier BV},
 }
