before correcting mobility

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -5490,6 +5490,179 @@ Part 1: Flow capacities up to and including 120 g/s},
   publisher    = {Elsevier BV},
 }
 
+@Article{LopezVega2023,
+  author       = {Lopez-Vega, Henry and Moodysson, Jerker},
+  date         = {2023-01},
+  journaltitle = {Industry and Innovation},
+  title        = {Digital Transformation of the Automotive Industry: An Integrating Framework to Analyse Technological Novelty and Breadth},
+  doi          = {10.1080/13662716.2022.2151873},
+  issn         = {1469-8390},
+  number       = {1},
+  pages        = {67--102},
+  volume       = {30},
+  groups       = {mobility},
+  publisher    = {Informa UK Limited},
+}
+
+@Article{Rizvi2023,
+  author       = {Rizvi, Syed Wasiul Hasan and Agrawal, Saurabh and Murtaza, Qasim},
+  date         = {2023-09},
+  journaltitle = {Renewable and Sustainable Energy Reviews},
+  title        = {Automotive industry and industry 4.0-Circular economy nexus through the consumers’ and manufacturers’ perspectives: A case study},
+  doi          = {10.1016/j.rser.2023.113517},
+  issn         = {1364-0321},
+  pages        = {113517},
+  volume       = {183},
+  groups       = {mobility},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Zhao2024,
+  author       = {Zhao, Jingyuan and Zhao, Wenyi and Deng, Bo and Wang, Zhenghong and Zhang, Feng and Zheng, Wenxiang and Cao, Wanke and Nan, Jinrui and Lian, Yubo and Burke, Andrew F.},
+  date         = {2024-05},
+  journaltitle = {Expert Systems with Applications},
+  title        = {Autonomous driving system: A comprehensive survey},
+  doi          = {10.1016/j.eswa.2023.122836},
+  issn         = {0957-4174},
+  pages        = {122836},
+  volume       = {242},
+  groups       = {mobility},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Chib2024,
+  author       = {Chib, Pranav Singh and Singh, Pravendra},
+  date         = {2024-01},
+  journaltitle = {IEEE Transactions on Intelligent Vehicles},
+  title        = {Recent Advancements in End-to-End Autonomous Driving Using Deep Learning: A Survey},
+  doi          = {10.1109/tiv.2023.3318070},
+  issn         = {2379-8858},
+  number       = {1},
+  pages        = {103--118},
+  volume       = {9},
+  groups       = {mobility},
+  publisher    = {Institute of Electrical and Electronics Engineers (IEEE)},
+}
+
+@Article{Teng2023,
+  author       = {Teng, Siyu and Hu, Xuemin and Deng, Peng and Li, Bai and Li, Yuchen and Ai, Yunfeng and Yang, Dongsheng and Li, Lingxi and Xuanyuan, Zhe and Zhu, Fenghua and Chen, Long},
+  date         = {2023-06},
+  journaltitle = {IEEE Transactions on Intelligent Vehicles},
+  title        = {Motion Planning for Autonomous Driving: The State of the Art and Future Perspectives},
+  doi          = {10.1109/tiv.2023.3274536},
+  issn         = {2379-8858},
+  number       = {6},
+  pages        = {3692--3711},
+  volume       = {8},
+  groups       = {mobility},
+  publisher    = {Institute of Electrical and Electronics Engineers (IEEE)},
+}
+
+@Article{Caro2023,
+  author       = {Caro, Martí and Tabani, Hamid and Abella, Jaume and Moll, Francesc and Morancho, Enric and Canal, Ramon and Altet, Josep and Calomarde, Antonio and Cazorla, Francisco J. and Rubio, Antonio and Fontova, Pau and Fornt, Jordi},
+  date         = {2023-05},
+  journaltitle = {Journal of Systems Architecture},
+  title        = {An automotive case study on the limits of approximation for object detection},
+  doi          = {10.1016/j.sysarc.2023.102872},
+  issn         = {1383-7621},
+  pages        = {102872},
+  volume       = {138},
+  groups       = {mobility},
+  publisher    = {Elsevier BV},
+}
+
+@InProceedings{Liu2024a,
+  author    = {Liu, Jianan and Ding, Guanhua and Xia, Yuxuan and Sun, Jinping and Huang, Tao and Xie, Lihua and Zhu, Bing},
+  booktitle = {2024 IEEE Intelligent Vehicles Symposium (IV)},
+  date      = {2024-06},
+  title     = {Which Framework is Suitable for Online 3D Multi-Object Tracking for Autonomous Driving with Automotive 4D Imaging Radar?},
+  doi       = {10.1109/iv55156.2024.10588837},
+  publisher = {IEEE},
+  groups    = {mobility},
+}
+
+@Article{Wang2023b,
+  author       = {Wang, Hai and Xu, Yansong and Wang, Zining and Cai, Yingfeng and Chen, Long and Li, Yicheng},
+  date         = {2023-06},
+  journaltitle = {IEEE Transactions on Emerging Topics in Computational Intelligence},
+  title        = {CenterNet-Auto: A Multi-object Visual Detection Algorithm for Autonomous Driving Scenes Based on Improved CenterNet},
+  doi          = {10.1109/tetci.2023.3235381},
+  issn         = {2471-285X},
+  number       = {3},
+  pages        = {742--752},
+  volume       = {7},
+  groups       = {mobility},
+  publisher    = {Institute of Electrical and Electronics Engineers (IEEE)},
+}
+
+@Article{Suganthi2023,
+  author       = {Suganthi, K. and Kumar, M. Arun and Harish, N. and HariKrishnan, S. and Rajesh, G. and Reka, S. Sofana},
+  date         = {2023-03},
+  journaltitle = {Sensors},
+  title        = {Advanced Driver Assistance System Based on IoT V2V and V2I for Vision Enabled Lane Changing with Futuristic Drivability},
+  doi          = {10.3390/s23073423},
+  issn         = {1424-8220},
+  number       = {7},
+  pages        = {3423},
+  volume       = {23},
+  groups       = {mobility},
+  publisher    = {MDPI AG},
+}
+
+@Article{Monk2023,
+  author       = {Monk, Chris and Sall, Robert and Lester, Benjamin D. and Stephen Higgins, J.},
+  date         = {2023-07},
+  journaltitle = {Accident Analysis &amp; Prevention},
+  title        = {Visual and cognitive demands of manual and voice-based driving mode implementations on smartphones},
+  doi          = {10.1016/j.aap.2023.107033},
+  issn         = {0001-4575},
+  pages        = {107033},
+  volume       = {187},
+  groups       = {mobility},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Hong2024,
+  author       = {Hong, Jinlong and Luo, Xi and Wu, Hao and Na, Xiaoxiang and Chu, Hongqing and Gao, Bingzhao and Chen, Hong},
+  date         = {2024-03},
+  journaltitle = {IEEE Transactions on Intelligent Vehicles},
+  title        = {Energy-Saving Driving Assistance System Integrated With Predictive Cruise Control for Electric Vehicles},
+  doi          = {10.1109/tiv.2024.3358797},
+  issn         = {2379-8858},
+  number       = {3},
+  pages        = {4518--4528},
+  volume       = {9},
+  groups       = {mobility},
+  publisher    = {Institute of Electrical and Electronics Engineers (IEEE)},
+}
+
+@Article{Parello2024,
+  author       = {Parello, R and Gourinat, Y and Benard, E and Defoort, S},
+  date         = {2024-03},
+  journaltitle = {Journal of Physics: Conference Series},
+  title        = {Structural sizing of a hydrogen tank for a commercial aircraft},
+  doi          = {10.1088/1742-6596/2716/1/012040},
+  issn         = {1742-6596},
+  number       = {1},
+  pages        = {012040},
+  volume       = {2716},
+  groups       = {mobility},
+  publisher    = {IOP Publishing},
+}
+
+@Article{Chen2024,
+  author       = {Chen, Chao and Chen, Hang and Mo, Li and Xiao, Shenbin and Li, Changjun and Yang, Ming and Reniers, Genserik},
+  date         = {2024-02},
+  journaltitle = {Journal of Loss Prevention in the Process Industries},
+  title        = {Buckling failure analysis of storage tanks under the synergistic effects of fire and wind loads},
+  doi          = {10.1016/j.jlp.2023.105208},
+  issn         = {0950-4230},
+  pages        = {105208},
+  volume       = {87},
+  groups       = {mobility},
+  publisher    = {Elsevier BV},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
@@ -5512,10 +5685,11 @@ Part 1: Flow capacities up to and including 120 g/s},
 2 StaticGroup:chaos\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:norms\;0\;1\;0x8a8a8aff\;\;\;;
 2 StaticGroup:patents\;0\;1\;0x7c7c7cff\;\;\;;
-2 StaticGroup:standards_section\;0\;1\;0x7c7c7cff\;\;\;;
+2 StaticGroup:standards_section\;0\;0\;0x7c7c7cff\;\;\;;
 3 StaticGroup:strandard_defintion\;0\;0\;0x707070ff\;\;\;;
 3 StaticGroup:airacft_subsection\;0\;1\;0x707070ff\;\;\;;
-3 StaticGroup:pressure_vessel_Section\;0\;1\;\;\;\;;
+3 StaticGroup:pressure_vessel_Section\;0\;0\;\;\;\;;
+2 StaticGroup:mobility\;0\;1\;0x7c7c7cff\;\;\;;
 1 StaticGroup:swith\;0\;0\;0x8a8a8aff\;\;\;;
 1 StaticGroup:webpages\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:Reports\;0\;0\;0x8a8a8aff\;\;\;;
