before correcting various fields

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -1045,20 +1045,22 @@ Now available to download in full as a PDF.},
 
 @online{img_Toyota,
   author = {Darren Halstead},
-  title  = {Image, Toyota hydrogen model car},
+  title  = {Image, Toyota hydrogen car model},
   annote   = {},
   url    = {https://unsplash.com/photos/yhXcqS-f-X4},
   urldate = {2022-08-18},
-  groups = {webpages},
+  groups = {webpages, mobility},
 }
 
-@online{img_Truck,
-  author = {Sven Brandsma},
-  title  = {Image, truck},
+
+
+@online{link_img_h2_bus,
+  author = {Hyundai},
+  title  = {Hyundai, ELEC CITY Fuel Cell, Image},
   annote   = {},
-  url    = {https://unsplash.com/photos/YnSWpIPX3pE},
-  urldate = {2022-08-18},
-  groups = {webpages},
+  url    = {https://ecv.hyundai.com/global/en/products/elec-city-fuel-cell-fcev},
+  urldate = {2022-10-07},
+  groups = {webpages, mobility},
 }
 
 @online{img_Ground,
@@ -1067,8 +1069,37 @@ Now available to download in full as a PDF.},
   annote   = {},
   url    = {https://unsplash.com/photos/ZVkDLrXGMdw},
   urldate = {2022-08-18},
-  groups = {webpages},
+  groups = {webpages, mobility},
 }
+
+
+@Online{link_us_atmposhere,
+  author    = {NASA},
+  title     = {U.S. Standard Atmosphere, 1976},
+  groups     = {webpages, mobility},
+  url       = {https://ntrs.nasa.gov/citations/19770009539},
+  urldate = {2024-10-07},
+}
+
+@Online{link_icao_atmposhere,
+  author    = {},
+  title     = {International Standard Atmosphere},
+  groups     = {webpages, mobility},
+  url       = {https://www.engineeringtoolbox.com/international-standard-atmosphere-d_985.html},
+  urldate = {2024-10-07},
+}
+
+@Misc{lecture_notes_Entwerfen_von_Verkehrsflugzeugen_I,
+  author    = {Dr.-Ing. Wolfgang Heinze},
+  title     = {Entwerfen von Verkehrsflugzeugen I, Vorlesungsskript},
+  groups     = {mobility},
+  howpublished = {Lecture Notes},
+  institution  = {Technische Universität Braunschweig, Institut für Flugzeugbau und Leichtbau},
+  year         = {2010},
+  month        = {July},
+}
+
+
 
 @Article{Cebolla2019,
   author       = {R. Ortiz Cebolla and B. Acosta and P. Moretto and N. de Miguel},
@@ -5659,6 +5690,258 @@ Part 1: Flow capacities up to and including 120 g/s},
   issn         = {0950-4230},
   pages        = {105208},
   volume       = {87},
+  groups       = {mobility},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Ustolin2022,
+  author       = {Ustolin, Federico and Campari, Alessandro and Taccani, Rodolfo},
+  date         = {2022-09},
+  journaltitle = {Journal of Marine Science and Engineering},
+  title        = {An Extensive Review of Liquid Hydrogen in Transportation with Focus on the Maritime Sector},
+  doi          = {10.3390/jmse10091222},
+  issn         = {2077-1312},
+  number       = {9},
+  pages        = {1222},
+  volume       = {10},
+  groups       = {mobility},
+  publisher    = {MDPI AG},
+}
+
+@InProceedings{Donatini2007,
+  author    = {Donatini, F. and Gigliucci, G. and Schiavetti, M.},
+  booktitle = {2007 International Conference on Clean Electrical Power},
+  date      = {2007-05},
+  title     = {Darwin project Use of renewable energy and Hydrogen on a sailing boat},
+  doi       = {10.1109/iccep.2007.384190},
+  pages     = {78--81},
+  publisher = {IEEE},
+  groups    = {mobility},
+}
+
+@Article{Psoma2002,
+  author       = {Psoma, Angela and Sattler, Gunter},
+  date         = {2002-04},
+  journaltitle = {Journal of Power Sources},
+  title        = {Fuel cell systems for submarines: from the first idea to serial production},
+  doi          = {10.1016/s0378-7753(01)01044-8},
+  issn         = {0378-7753},
+  number       = {1–2},
+  pages        = {381--383},
+  volume       = {106},
+  groups       = {mobility},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Alfonsin2014,
+  author       = {Alfonsín, Víctor and Suarez, Andres and Cancela, Angeles and Sanchez, Angel and Maceiras, Rocio},
+  date         = {2014-07},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Modelization of hybrid systems with hydrogen and renewable energy oriented to electric propulsion in sailboats},
+  doi          = {10.1016/j.ijhydene.2014.05.104},
+  issn         = {0360-3199},
+  number       = {22},
+  pages        = {11763--11773},
+  volume       = {39},
+  groups       = {mobility},
+  publisher    = {Elsevier BV},
+}
+
+@InProceedings{Weigl2008,
+  author    = {Weigl, J. and Inayati, I. and Zind, E. and Said, H.},
+  booktitle = {2008 IEEE International Conference on Sustainable Energy Technologies},
+  date      = {2008-11},
+  title     = {Pios fuel cell Motorcycle; design, development and test of hydrogen fuel cell powered vehicle},
+  doi       = {10.1109/icset.2008.4747174},
+  pages     = {1120--1122},
+  publisher = {IEEE},
+  volume    = {127},
+  groups    = {mobility},
+}
+
+@InProceedings{DieterWeigl2015,
+  author    = {Dieter Weigl, Joerg and Henz, Martin and Inayati and Saidi, Hamdani},
+  booktitle = {Proceedings of the Joint International Conference on Electric Vehicular Technology and Industrial, Mechanical, Electrical and Chemical Engineering (ICEVT &amp; IMECE)},
+  date      = {2015-11},
+  title     = {Converted battery-powered electric motorcycle and hydrogen fuel cell-powered electric motorcycle in South East Asia: Development and performance test},
+  doi       = {10.1109/icevtimece.2015.7496637},
+  publisher = {IEEE},
+  groups    = {mobility},
+}
+
+@Article{Weigl2011,
+  author       = {Weigl, Joerg D. and Inayati, Inayati and Saidi, Hamdani},
+  date         = {2011-03},
+  journaltitle = {ECS Transactions},
+  title        = {Development of Hydrogen Fuel Cell Motorcycle in South East Asia},
+  doi          = {10.1149/1.3562484},
+  issn         = {1938-6737},
+  number       = {1},
+  pages        = {289--293},
+  volume       = {30},
+  groups       = {mobility},
+  publisher    = {The Electrochemical Society},
+}
+
+@Article{Hwang2012,
+  author       = {Hwang, Jenn Jiang},
+  date         = {2012-08},
+  journaltitle = {Renewable and Sustainable Energy Reviews},
+  title        = {Review on development and demonstration of hydrogen fuel cell scooters},
+  doi          = {10.1016/j.rser.2012.03.036},
+  issn         = {1364-0321},
+  number       = {6},
+  pages        = {3803--3815},
+  volume       = {16},
+  groups       = {mobility},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Hwang2010,
+  author       = {Hwang, Jenn Jiang and Chang, Wei Ru},
+  date         = {2010-11},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Life-cycle analysis of greenhouse gas emission and energy efficiency of hydrogen fuel cell scooters},
+  doi          = {10.1016/j.ijhydene.2010.07.148},
+  issn         = {0360-3199},
+  number       = {21},
+  pages        = {11947--11956},
+  volume       = {35},
+  groups       = {mobility},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Fakhreddine2023,
+  author       = {Fakhreddine, Omar and Gharbia, Yousef and Derakhshandeh, Javad Farrokhi and Amer, A. M.},
+  date         = {2023-06},
+  journaltitle = {World Electric Vehicle Journal},
+  title        = {Challenges and Solutions of Hydrogen Fuel Cells in Transportation Systems: A Review and Prospects},
+  doi          = {10.3390/wevj14060156},
+  issn         = {2032-6653},
+  number       = {6},
+  pages        = {156},
+  volume       = {14},
+  groups       = {mobility},
+  publisher    = {MDPI AG},
+}
+
+@Article{DeWagter2021,
+  author       = {De Wagter, C. and Remes, B. and Smeur, E. and van Tienen, F. and Ruijsink, R. and van Hecke, K. and van der Horst, E.},
+  date         = {2021-04},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {The NederDrone: A hybrid lift, hybrid energy hydrogen UAV},
+  doi          = {10.1016/j.ijhydene.2021.02.053},
+  issn         = {0360-3199},
+  number       = {29},
+  pages        = {16003--16018},
+  volume       = {46},
+  groups       = {mobility},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Yan2023,
+  author       = {Yan, Yizhe and Wang, Bin and Wang, Chaohui and Zhao, Dan and Xiao, Chunwu},
+  date         = {2023-08},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Adaptive maximum power point tracking based on Kalman filter for hydrogen fuel cell in hybrid unmanned aerial vehicle applications},
+  doi          = {10.1016/j.ijhydene.2023.03.288},
+  issn         = {0360-3199},
+  number       = {66},
+  pages        = {25939--25957},
+  volume       = {48},
+  groups       = {mobility},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Kucuk2024,
+  author       = {Kucuk, Merve and Sener, Ramazan and Surmen, Ali},
+  date         = {2024-01},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Effectiveness of hydrogen enrichment strategy for Wankel engines in unmanned aerial vehicle applications at various altitudes},
+  doi          = {10.1016/j.ijhydene.2023.08.304},
+  issn         = {0360-3199},
+  pages        = {1534--1549},
+  volume       = {52},
+  groups       = {mobility},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Tiseira2023,
+  author       = {Tiseira, A. and Novella, R. and Garcia-Cuevas, L.M. and Lopez-Juarez, M.},
+  date         = {2023-07},
+  journaltitle = {Energy Conversion and Management},
+  title        = {Concept design and energy balance optimization of a hydrogen fuel cell helicopter for unmanned aerial vehicle and aerotaxi applications},
+  doi          = {10.1016/j.enconman.2023.117101},
+  issn         = {0196-8904},
+  pages        = {117101},
+  volume       = {288},
+  groups       = {mobility},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Gavrilovic2024,
+  author       = {Gavrilovic, Nikola and Mertika, Sofia and Moschetta, Jean-Marc and Schimpf, Joshua and Park, Gyeongbae and Kim, Seo Young},
+  date         = {2024-09},
+  journaltitle = {Journal of Aircraft},
+  title        = {Experimental Study on a Liquid Hydrogen Tank for Unmanned Aerial Vehicle Applications},
+  doi          = {10.2514/1.c037956},
+  issn         = {1533-3868},
+  pages        = {1--12},
+  groups       = {mobility},
+  publisher    = {American Institute of Aeronautics and Astronautics (AIAA)},
+}
+
+@Article{Desantes2022,
+  author       = {Desantes, José M. and Novella, Ricardo and García-Cuevas, Luis M. and Lopez-Juarez, Marcos},
+  date         = {2022-06},
+  journaltitle = {Transactions on Aerospace Research},
+  title        = {Feasibility Study for a Fuel Cell-Powered Unmanned Aerial Vehicle with a 75 Kg Payload},
+  doi          = {10.2478/tar-2022-0008},
+  issn         = {2545-2835},
+  number       = {2},
+  pages        = {13--30},
+  volume       = {2022},
+  groups       = {mobility},
+  publisher    = {Walter de Gruyter GmbH},
+}
+
+@Article{PonsPrats2022,
+  author       = {Pons-Prats, Jordi and Živojinović, Tanja and Kuljanin, Jovana},
+  date         = {2022-10},
+  journaltitle = {Transportation Research Part E: Logistics and Transportation Review},
+  title        = {On the understanding of the current status of urban air mobility development and its future prospects: Commuting in a flying vehicle as a new paradigm},
+  doi          = {10.1016/j.tre.2022.102868},
+  issn         = {1366-5545},
+  pages        = {102868},
+  volume       = {166},
+  groups       = {mobility},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Franco2011,
+  author       = {Franco, Antonio and Rivas, Damián},
+  date         = {2011-07},
+  journaltitle = {Journal of Guidance, Control, and Dynamics},
+  title        = {Minimum-Cost Cruise at Constant Altitude of Commercial Aircraft Including Wind Effects},
+  doi          = {10.2514/1.53255},
+  issn         = {1533-3884},
+  number       = {4},
+  pages        = {1253--1260},
+  volume       = {34},
+  groups       = {mobility},
+  publisher    = {American Institute of Aeronautics and Astronautics (AIAA)},
+}
+
+@Article{Filippone2010,
+  author       = {Filippone, Antonio},
+  date         = {2010-06},
+  journaltitle = {Aerospace Science and Technology},
+  title        = {Cruise altitude flexibility of jet transport aircraft},
+  doi          = {10.1016/j.ast.2010.01.003},
+  issn         = {1270-9638},
+  number       = {4},
+  pages        = {283--294},
+  volume       = {14},
   groups       = {mobility},
   publisher    = {Elsevier BV},
 }
