correction of essential standrds inshallah compledted

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -1321,6 +1321,15 @@ Now available to download in full as a PDF.},
   groups = {webpages},
 }
 
+@online{link_Lufthansa_Airbus_380,
+  author = {Lufthansa},
+  title  = {The Airbus A380 – Lufthansa‘s flagship},
+  annote   = {},
+  url    = {https://www.lufthansagroup.com/en/company/fleet/lufthansa-and-regional-partners/airbus-a380-800.html},
+  urldate = {2024-10-09},
+  groups = {webpages},
+}
+
 @online{link_Image_Type_4_Cylinder,
   author = {U.S. Department of Engery},
   title  = {Illustrative example for an cylinder shaped hydrogen storage, Fuel Cell Technologies Office, Hydrogen Storage},
@@ -3232,13 +3241,6 @@ Now available to download in full as a PDF.},
   month        = {6},
   publisher    = {MDPI AG},
   year         = {2015},
-}
-
-@Article{EU2010,
-  author       = {EU},
-  date         = {2010},
-  journaltitle = {Norm},
-  title        = {Europäisches Parlament (Veranst.): Verordnung (EU) Nr. 406/2010 der Kommission vom 26.April 2010 zur Durchführung der Verordnung (EG) Nr. 79/2009 des Europäischen Parlaments und des Rates über die Typgenehmigung von wasserstoffbetriebenen Kraftfahrzeugen},
 }
 
 
