correction of essential standrds inshallah completed v_2

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -1323,7 +1323,7 @@ Now available to download in full as a PDF.},
 
 @online{link_Lufthansa_Airbus_380,
   author = {Lufthansa},
-  title  = {The Airbus A380 – Lufthansa‘s flagship},
+  title  = {The Airbus A380 – Lufthansa's flagship},
   annote   = {},
   url    = {https://www.lufthansagroup.com/en/company/fleet/lufthansa-and-regional-partners/airbus-a380-800.html},
   urldate = {2024-10-09},
